feat(frontend): g tag added to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SBMCH Attendance Dashboard</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9D4Q2FZH54"></script>
+    <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+              gtag('config', 'G-9D4Q2FZH54');
+    </script>
+
     <!-- Tailwind CSS (CDN). To customize, adjust config below. -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
